syntax = "proto3";
option java_multiple_files = true;
package com.example.rpc.notification;

message NotificationRequest {
  string order_id = 1;
}

message NotificationUpdate {
  string status = 1;
  string timestamp = 2;
}

service NotificationService {
  // Note the 'stream' keyword before the response
  rpc SubscribeToUpdates(NotificationRequest) returns (stream NotificationUpdate);
}